Fix: Dropdown with "hover" trigger incorrectly rendered on mobile devices (buefy/buefy#3961) (buefy/buefy#3962)
* fix(lib): dislodged hoverable dropdown on mobile screen

- Fixes the issue that the contents of a hoverable `BDropdown` was
  displayed at a wrong position on a mobile (narrow) screen.

  I initially thought to cancel the effect of `is-hoverable` on narrow
  screen whether it is on mobile devices or not. But it contradicted to
  the documentation of `Dropdown`, and I decided to keep the original
  statement about the behavior of "hover" trigger.
  https://github.com/buefy/buefy/issues/3961#issuecomment-1876302180  

  Since hover events do not make sense on touch devices. "hover"
  trigger now works like "click" trigger on touch devices, and dropdown
  contents are shown in a modal when the screen is narrow.
  To detect actual touch devices, the trigger element of `BDropdown` now
  handles touch events: touchstart, touchmove, and touchend. The
  contents of `BDropdown` with "hover" trigger on a touch device pops up
  only when the trigger is tapped; i.e., at touchend immediately
  following touchstart. `BDropdown` bears `.is-touch-enabled` class if
  the trigger is tapped.
  The modal style is applied when the screen is narrow and:
    - `.is-hoverable` is disabled
    - or `.is-touch-enabled` is enabled

  The `:hover` state is only applied if touch is not enabled
  (`:not(.is-touch-enabled)`).
  Delays to reset `isTouchEnabled` to avoid glitches; I observed a ghost
  of the dropdown menu under the trigger on a touch device.
  I avoided `@media (hover: hover)` condition for the `:hover` state, because
  it might cause problems on 2-in-1 devices:
  https://github.com/buefy/buefy/pull/3962#issuecomment-1882008774

  "hover" trigger precedes "click" trigger in case both are enabled.

* feat(docs): dropdown "hover" behavior on touch devices

- `ExSimple` example of `BDropdown` explains the new behavior of
  `BDropdown` w

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -42,7 +42,7 @@ $dropdown-disabled-opacity: 0.5 !default;
             display: none;
         }
     }
-    &.is-hoverable {
+    &.is-hoverable:not(.is-touch-enabled) {
         &:hover {
             .dropdown-menu {
                 display: inherit;
@@ -110,7 +110,9 @@ $dropdown-disabled-opacity: 0.5 !default;
         }
     }
     @media screen and (max-width: $dropdown-mobile-breakpoint - 1px) {
-        &.is-mobile-modal {
+        /* prevents modal on hover unless it is on touch devices */
+        &.is-mobile-modal:not(.is-hoverable),
+        &.is-mobile-modal.is-touch-enabled {
             > .dropdown-menu {
                 position: fixed !important;
                 width: calc(100vw - 40px);
